# shecar

./: CMakeLists.txt  README.md  hand_eye_calibration_flags.txt
data/monocular/: handposes.txt  intrinsic.txt  match.matches  output
src/: command_line_helpers.h  hand_eye_bundle_adjustment.cc  hand_eye_bundle_adjustment.h  handeye_project_point_to_image.h  handeyecalibration_estimator.cc  handeyecalibration_estimator.h  handeyecalibration_utils.cc  handeyecalibration_utils.h  handeyecalibrationbuilder.cc  handeyecalibrationbuilder.h  handeyepinholereprojectionerror.h  handeyereprojectionerror.h  handeyetrackestimator.cc  handeyetrackestimator.h  handeyetransformation.cc  handeyetransformation.h  main.cpp  type.h
src/axxb/: axxbestimator.h  axxbsolver.h  axxbsvdsolver.cc  axxbsvdsolver.h
